# PWLService

./: README.md  pyproject.toml
app_payment/: models.py  services.py  urls.py  validators.py  views.py
app_payment/management/commands/: ccpayments.py
app_payment/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
app_payment/serializers/: stripe_session.py
app_payment/tests/: no_test_stripe.py
app_pwl/: models.py  permissions.py  tests.py  urls.py  validators.py
app_pwl/migrations/: 0001_initial.py  0002_initial.py
app_pwl/serializers/: course.py  lesson.py
app_pwl/tests/: test_lesson.py
app_pwl/views/: course.py  lesson.py
app_subscriptions/: models.py  urls.py
app_subscriptions/migrations/: 0001_initial.py  0002_initial.py
app_subscriptions/serializers/: course.py
app_subscriptions/seriolizers/: course.py
app_subscriptions/tests/: test_subscribe_course.py
app_subscriptions/views/: course.py
app_users/: tasks.py
app_users/management/commands/: ccusers.py
app_users/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: db.json
